add js and adapt files for overlay refs #3610

--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -14,24 +14,8 @@
 </script>
         <script src="js/overlayhelpers.js" type="text/javascript">
 </script>
-        <script type="text/javascript">
-//<![CDATA[
-        jQuery(document).ready(function($) {
-        $('a.realisation').each(function() {
-            $(this).prepOverlay({
-                width: '870px',
-                subtype:'ajax',
-                filter: '#overlay>*',
-                urlmatch:'#$',
-                mask: {
-                    color: '#000',
-                },
-            });
-
-        });
-        });
-        //]]>
-        </script>
+        <script src="js/main.js" type="text/javascript">
+</script>
     </head>
     <body>
         <div id="background-affinitic"></div>
