mise en place la skin, slider du background et moins de transparence pour coller a la skin de depart. ##

--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -27,13 +27,14 @@
         </section><!--content-text-->
         
         <section id="content-image">
-            <img src="images/reseau.png" />
+            <img src="images/reseau.png" width="390" />
         </section><!--content-text-->
 
         <div class="break-float"></div>
         
         <footer id="footer"></footer><!--footer-->
     </div><!--main-content-->
+    <div id="supersized"></div>
 </div><!--wrapper-->
 </body>
 </html>
