photo homepage dans les ton du site base. ##

--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -27,7 +27,7 @@
         </section><!--content-text-->
         
         <section id="content-image">
-            <img src="images/reseau.png" width="390" />
+            <img src="images/sculpture.jpg" />
         </section><!--content-text-->
 
         <div class="break-float"></div>
