finition css très précisement selon le modele de pat. changement logo. intégration des fonts. poistionnement titre societe. modification de la barre d'onglets. ##

--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -19,7 +19,11 @@
     <div id="boiteSite">
         <nav id="menu-sup"></nav><!--menu-->
         <div id="content-main">
-            <div id="logo"></div>   
+            <div id="logo-societe">
+                <div id="logo"></div>
+                <div id="societe">affinitic</div>
+                <div class="break-float"></div>
+            </div>   
 
             <section id="content-text"
                      role="content-text">
