Commit the last changes. ##

--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -55,7 +55,7 @@
             <div class="content">
                 <p>
                     Affinitic Sprl<br/>
-                    Rue des Canadiens, 248 B-7022 Hyon (Belgique)
+                    Zoning Industriel de Mornimont, 34 &nbsp; B-5190 Jemeppe sur Sambre (Belgique)
                 </p><a href="#"><img src="images/plone-powered.png" /></a> <a href="#"><img src="images/zope-powered.gif" /></a> <a href="#"><img src="images/python-powered.gif" /></a>
             </div>
             <div id="bg-bottom"></div>
