ajout d'une ombre portée

--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -16,7 +16,7 @@
 <body>
 <div id="wrapper">
 
-    <div id="boiteSite">
+    <div id="wrapper-site">
         <nav id="menu-sup"></nav><!--menu-->
         <div id="content-main">
             <div id="logo-societe">
@@ -33,8 +33,6 @@
             </section><!--content-text-->
             <div class="break-float"></div>
         </div>
-
-
         <!--<footer id="footer"></footer>--><!--footer-->
     </div><!--main-content-->
     <div id="supersized"></div>
