Mise en place des icônes network rezo, du footer et de l'adresse

--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -22,6 +22,7 @@
             <div id="logo-societe">
                 <div id="logo"></div>
                 <div id="societe">affinitic</div>
+
                 <div class="break-float"></div>
             </div>
 
@@ -33,7 +34,20 @@
             </section><!--content-text-->
             <div class="break-float"></div>
         </div>
-        <!--<footer id="footer"></footer>--><!--footer-->
+        <footer id="footer-theme">
+            <div id="facebook"><a href="#"></a></div>
+            <div id="tweeter"><a href="#"></a></div>
+            <div id="google-plus"><a href="#"></a></div>
+            <div id="coordonnee">
+                Zoning Industriel de Mornimont, 34 -
+                B-5190 Jemeppe sur Sambre -
+                Belgique -
+                info@affinitic.be
+            </div>
+            <div class="break-float"></div>
+        </footer><!--footer-->
+
+
     </div><!--main-content-->
     <div id="supersized"></div>
 </div><!--wrapper-->
