mise en form du zaf folder

--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -30,8 +30,7 @@
                      role="content-text">
             </section><!--content-text-->
 
-            <section id="content-right-image">
-            </section><!--content-text-->
+            <section id="content-right-image"></section><!--content-text-->
             <div class="break-float"></div>
         </div>
         <footer id="footer-theme">
