--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -34,9 +34,22 @@
             <div class="break-float"></div>
         </div>
         <footer id="footer-theme">
-            <div id="facebook"><a href="#"></a></div>
-            <div id="tweeter"><a href="#"></a></div>
-            <div id="google-plus"><a href="#"></a></div>
+            <div id="facebook">
+                <a href="https://www.facebook.com/Affinitic?fref=ts"
+                   target="_blank"></a>
+            </div>
+            <div id="tweeter">
+                <a href="https://twitter.com/affinitic"
+                   target="_blanck"></a>
+            </div>
+            <div id="google-plus">
+                <a href="https://plus.google.com/114068655195334570692/about"
+                   target="_blank"></a>
+            </div>
+            <div id="blog-affinitic">
+                <a href="http://blog.affinitic.be/"
+                   target="_blank"></a>
+            </div>
             <div id="coordonnee">
                 Zoning Industriel de Mornimont, 34 -
                 B-5190 Jemeppe sur Sambre -
