--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -51,9 +51,9 @@
                    target="_blank"></a>
             </div>
             <div id="coordonnee">
-                Zoning Industriel de Mornimont, 34 -
+                Zoning Industriel de Mornimont, rue Vieille Sambre, 34<br />
                 B-5190 Jemeppe sur Sambre -
-                Belgique -
+                Belgique<br />
                 info@affinitic.be
             </div>
             <div class="break-float"></div>
