Make logo clickable and fix some styles

--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -20,7 +20,9 @@
         <nav id="menu-sup"></nav><!--menu-->
         <div id="content-main">
             <div id="logo-societe">
-                <div id="logo"></div>
+                <a href="http://www.affinitic.be">
+                    <div id="logo"></div>
+                </a>
                 <div id="societe">affinitic</div>
 
                 <div class="break-float"></div>
