--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -63,6 +63,18 @@
 
     </div><!--main-content-->
     <div id="supersized"></div>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-35400397-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
 </div><!--wrapper-->
 </body>
 </html>
